@@ -2,11 +2,12 @@
 # encoding: utf-8
 
 test_programs = {
-    'synchroClient': ['testSynchroClient.cpp'],
-    'synchroServer': ['testSynchroServer.cpp'],
-    'synchroServerClient': ['testSynchroServerClient.cpp'],
+    #'synchroClient': ['testSynchroClient.cpp'],
+    #'synchroServer': ['testSynchroServer.cpp'],
+    #'synchroServerClient': ['testSynchroServerClient.cpp'],
     'testSem': ['testSem.cpp'],
     'jack_test': ['jack_test.cpp'],
+    'jack_cpu': ['jack_cpu.c'],
     }
 
 def build(bld):
@@ -23,5 +24,5 @@ def build(bld):
 	    prog.env.append_value("LINKFLAGS", "")
         prog.uselib_local = 'clientlib'
         prog.target = test_program
-        if test_program != 'jack_test':
-            prog.inst_var = 0
+        #if test_program != 'jack_test':
+        #    prog.inst_var = 0
